<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout style="@style/TitleBar">
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_home"
			android:onClick="onClickHome" android:src="@drawable/title_home" />
		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_about"
			android:onClick="onClickAbout" android:src="@drawable/title_about" />
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:id="@+id/txtEVentas" android:layout_width="wrap_content"
			android:layout_height="0dp" android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp" android:layout_marginTop="20dp"
			android:layout_weight="1" android:text="@string/txt_ventas"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp" android:layout_weight="1">
			<TextView android:id="@+id/txtEmitidoVentas"
				android:layout_width="0dp" android:layout_height="wrap_content"
				android:layout_weight="1" android:gravity="right"
				android:text="Emitidos: 0 de un total de ?" android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>
		<ProgressBar android:id="@+id/pbVentas"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
			android:layout_weight="1" android:scrollbarStyle="insideOverlay"
			android:soundEffectsEnabled="true" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:id="@+id/txtRegistroVenta"
			android:layout_width="wrap_content" android:layout_height="0dp"
			android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
			android:layout_marginTop="20dp" android:layout_weight="1"
			android:text="@string/txt_registro_venta" android:textAppearance="?android:attr/textAppearanceLarge" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="0dp" android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp" android:layout_weight="1">
			<TextView android:id="@+id/txtEmitidoRegistro"
				android:layout_width="0dp" android:layout_height="wrap_content"
				android:layout_weight="1" android:gravity="right"
				android:text="Emitidos: 0 de un total de ?" android:textAppearance="?android:attr/textAppearanceSmall" />
		</LinearLayout>
		<ProgressBar android:id="@+id/pbRegistros"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent" android:layout_height="0dp"
			android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
			android:layout_weight="1" android:soundEffectsEnabled="true" />
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="0dp"
		android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
		android:layout_marginTop="5dp" android:baselineAligned="true"
		android:orientation="vertical">

		<TextView android:id="@+id/lblEmision" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:text="@string/fecha_ultima_transmision"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView android:id="@+id/txtFechaTransmision"
			android:layout_width="118dp" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:layout_weight="0.27"
			android:text="Large Text" android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView android:id="@+id/txtIp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:gravity="center" android:text="Conectado a:"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ImageButton android:id="@+id/btnTransmitirEmision"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:src="@drawable/transmitir" />

	</LinearLayout>
</LinearLayout>
    